fix image sizes on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -95,6 +95,12 @@ hr.article-divider{
     width: 40%;
 }
 
+/* About Junction ASIA */
+.aboutJunctionAsia{
+    width: 60%;
+    padding-top:240px;
+}
+
 
 /* parallax */
 .content {
