--- a/css/mobile.css
+++ b/css/mobile.css
@@ -92,6 +92,12 @@ hr.article-divider{
     width: 80%;
 }
 
+/* About Junction ASIA */
+.aboutJunctionAsia{
+    width: 80%;
+    padding-top:280px;
+}
+
 .aboutus{
     color: #fff;
     font-size: 48px;
